--- a/Casey/modeling.ipynb
+++ b/Casey/modeling.ipynb
@@ -32110,7 +32110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -32127,6 +32127,272 @@
    ],
    "source": [
     "multModel(['GrLivArea','OverallQual'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: ['GrLivArea', 'OverallQual', 'GarageCars']\n",
+      "coefs: [[0.3624365  0.13589309 0.13507718]]\n",
+      "intercept: [8.32458268]\n",
+      "train R2: 0.7754245315534731\n",
+      "test R2: 0.8083848925718107\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModel(['GrLivArea','OverallQual','GarageCars'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: ['GrLivArea', 'OverallQual', 'GarageCars', 'Fireplaces']\n",
+      "coefs: [[0.32836764 0.13100417 0.13101996 0.07300327]]\n",
+      "intercept: [8.57085802]\n",
+      "train R2: 0.7817550953343263\n",
+      "test R2: 0.8140128298363682\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModel(['GrLivArea','OverallQual','GarageCars','Fireplaces'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: ['GrLivArea', 'OverallQual', 'GarageCars', 'Fireplaces', 'HeatingQC']\n",
+      "coefs: [[0.33660366 0.11482399 0.12407488 0.07842209 0.0516883 ]]\n",
+      "intercept: [8.40406633]\n",
+      "train R2: 0.7940531760302814\n",
+      "test R2: 0.8226973226591564\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModel(['GrLivArea','OverallQual','GarageCars','Fireplaces','HeatingQC'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## statsmodels for more info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multModelSM(features):\n",
+    "    X_add_const = sm.add_constant(Xtrain[features])\n",
+    "    ols = sm.OLS(ytrain, X_add_const)\n",
+    "    ans = ols.fit()\n",
+    "    print(ans.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              SalePrice   R-squared:                       0.737\n",
+      "Model:                            OLS   Adj. R-squared:                  0.736\n",
+      "Method:                 Least Squares   F-statistic:                     1528.\n",
+      "Date:                Thu, 04 Mar 2021   Prob (F-statistic):          3.59e-317\n",
+      "Time:                        14:25:39   Log-Likelihood:                 192.84\n",
+      "No. Observations:                1095   AIC:                            -379.7\n",
+      "Df Residuals:                    1092   BIC:                            -364.7\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===============================================================================\n",
+      "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------\n",
+      "const           7.8753      0.150     52.444      0.000       7.581       8.170\n",
+      "GrLivArea       0.4301      0.023     18.488      0.000       0.384       0.476\n",
+      "OverallQual     0.1680      0.006     29.436      0.000       0.157       0.179\n",
+      "==============================================================================\n",
+      "Omnibus:                      218.362   Durbin-Watson:                   2.048\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              713.401\n",
+      "Skew:                          -0.963   Prob(JB):                    1.22e-155\n",
+      "Kurtosis:                       6.454   Cond. No.                         238.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModelSM(['GrLivArea','OverallQual'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              SalePrice   R-squared:                       0.775\n",
+      "Model:                            OLS   Adj. R-squared:                  0.775\n",
+      "Method:                 Least Squares   F-statistic:                     1256.\n",
+      "Date:                Thu, 04 Mar 2021   Prob (F-statistic):               0.00\n",
+      "Time:                        14:25:47   Log-Likelihood:                 279.91\n",
+      "No. Observations:                1095   AIC:                            -551.8\n",
+      "Df Residuals:                    1091   BIC:                            -531.8\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===============================================================================\n",
+      "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------\n",
+      "const           8.3246      0.143     58.391      0.000       8.045       8.604\n",
+      "GrLivArea       0.3624      0.022     16.432      0.000       0.319       0.406\n",
+      "OverallQual     0.1359      0.006     23.563      0.000       0.125       0.147\n",
+      "GarageCars      0.1351      0.010     13.714      0.000       0.116       0.154\n",
+      "==============================================================================\n",
+      "Omnibus:                      179.148   Durbin-Watson:                   2.050\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              550.483\n",
+      "Skew:                          -0.810   Prob(JB):                    2.91e-120\n",
+      "Kurtosis:                       6.072   Cond. No.                         249.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModelSM(['GrLivArea','OverallQual','GarageCars'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              SalePrice   R-squared:                       0.782\n",
+      "Model:                            OLS   Adj. R-squared:                  0.781\n",
+      "Method:                 Least Squares   F-statistic:                     976.1\n",
+      "Date:                Thu, 04 Mar 2021   Prob (F-statistic):               0.00\n",
+      "Time:                        14:30:33   Log-Likelihood:                 295.56\n",
+      "No. Observations:                1095   AIC:                            -581.1\n",
+      "Df Residuals:                    1090   BIC:                            -556.1\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===============================================================================\n",
+      "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------\n",
+      "const           8.5709      0.147     58.198      0.000       8.282       8.860\n",
+      "GrLivArea       0.3284      0.023     14.541      0.000       0.284       0.373\n",
+      "OverallQual     0.1310      0.006     22.767      0.000       0.120       0.142\n",
+      "Fireplaces      0.0730      0.013      5.623      0.000       0.048       0.098\n",
+      "GarageCars      0.1310      0.010     13.450      0.000       0.112       0.150\n",
+      "==============================================================================\n",
+      "Omnibus:                      166.979   Durbin-Watson:                   2.056\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              495.572\n",
+      "Skew:                          -0.767   Prob(JB):                    2.44e-108\n",
+      "Kurtosis:                       5.917   Cond. No.                         261.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModelSM(['GrLivArea','OverallQual','Fireplaces','GarageCars'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              SalePrice   R-squared:                       0.794\n",
+      "Model:                            OLS   Adj. R-squared:                  0.793\n",
+      "Method:                 Least Squares   F-statistic:                     839.8\n",
+      "Date:                Thu, 04 Mar 2021   Prob (F-statistic):               0.00\n",
+      "Time:                        14:31:03   Log-Likelihood:                 327.32\n",
+      "No. Observations:                1095   AIC:                            -642.6\n",
+      "Df Residuals:                    1089   BIC:                            -612.6\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===============================================================================\n",
+      "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------\n",
+      "const           8.4041      0.145     58.114      0.000       8.120       8.688\n",
+      "GrLivArea       0.3366      0.022     15.321      0.000       0.293       0.380\n",
+      "OverallQual     0.1148      0.006     19.327      0.000       0.103       0.126\n",
+      "Fireplaces      0.0784      0.013      6.206      0.000       0.054       0.103\n",
+      "GarageCars      0.1241      0.010     13.052      0.000       0.105       0.143\n",
+      "HeatingQC       0.0517      0.006      8.064      0.000       0.039       0.064\n",
+      "==============================================================================\n",
+      "Omnibus:                      145.173   Durbin-Watson:                   2.014\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              468.287\n",
+      "Skew:                          -0.643   Prob(JB):                    2.06e-102\n",
+      "Kurtosis:                       5.934   Cond. No.                         287.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "multModelSM(['GrLivArea','OverallQual','Fireplaces','GarageCars','HeatingQC'])"
    ]
   }
  ],
