--- a/Casey/modeling.ipynb
+++ b/Casey/modeling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32012,7 +32012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32022,7 +32022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32031,7 +32031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32048,7 +32048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -32057,20 +32057,21 @@
        "{'copy_X': True, 'fit_intercept': True, 'n_jobs': None, 'normalize': False}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "ols = LinearRegression() # create an instance of LinearRegression\n",
     "ols.get_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -32078,7 +32079,8 @@
      "output_type": "stream",
      "text": [
       "[[0.43014844 0.16795603]]\n",
-      "[7.87528286]\n"
+      "[7.87528286]\n",
+      "\n"
      ]
     }
    ],
@@ -32091,7 +32093,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, make_scorer\n",
+    "make_scorer?\n",
+    "cross_val_score?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32110,7 +32123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -32131,6 +32144,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"RMSE on Training set :\", rmse_cv_train(ols).mean())\n",
+    "print(\"RMSE on Test set :\", rmse_cv_test(ols).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [
@@ -32147,7 +32170,9 @@
     }
    ],
    "source": [
-    "multModel(['GrLivArea','OverallQual','GarageCars'])"
+    "multModel(['GrLivArea','OverallQual','GarageCars'])\n",
+    "# RMSE on Training set : 0.20183226152069134\n",
+    "# RMSE on Test set : 0.1838143964540892"
    ]
   },
   {
@@ -32169,6 +32194,34 @@
    ],
    "source": [
     "multModel(['GrLivArea','OverallQual','GarageCars','Fireplaces'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on Training set : 0.17911857034089232\n",
+      "RMSE on Test set : 0.16818476591181514\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define error measure for official scoring : RMSE\n",
+    "scorer = make_scorer(mean_squared_error, greater_is_better = False)\n",
+    "def rmse_cv_train(model):\n",
+    "    rmse= np.sqrt(-cross_val_score(model, Xtrain[['GrLivArea','OverallQual', 'GarageCars','Fireplaces','HeatingQC']], ytrain, scoring = scorer, cv = 10))\n",
+    "    return(rmse)\n",
+    "def rmse_cv_test(model):\n",
+    "    rmse= np.sqrt(-cross_val_score(model, Xtest[['GrLivArea','OverallQual', 'GarageCars','Fireplaces','HeatingQC']], ytest, scoring = scorer, cv = 10))\n",
+    "    return(rmse)\n",
+    "print(\"RMSE on Training set :\", rmse_cv_train(ols).mean())\n",
+    "print(\"RMSE on Test set :\", rmse_cv_test(ols).mean())"
    ]
   },
   {
