Added models using XGBoost and random forest

--- a/Yukti/modeling_decisionTree.ipynb
+++ b/Yukti/modeling_decisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "daily-horizontal",
+   "id": "genuine-exchange",
    "metadata": {},
    "source": [
     "### Data Preprocessing based on Casey's code"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "synthetic-intervention",
+   "id": "unavailable-netherlands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "flying-holder",
+   "id": "early-principle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "metropolitan-sacrifice",
+   "id": "dying-credit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-registration",
+   "id": "reflected-fortune",
    "metadata": {},
    "source": [
     "### Setting up the decision tree"
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "chinese-bangkok",
+   "execution_count": 87,
+   "id": "hourly-development",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "DecisionTreeRegressor(max_depth=5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "copyrighted-identification",
+   "execution_count": 88,
+   "id": "renewable-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,31 +93,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "compatible-seeker",
+   "execution_count": 89,
+   "id": "promising-science",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(max_depth=5)"
+       "DecisionTreeRegressor(max_depth=7)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "regr_1 = DecisionTreeRegressor(criterion='mse',max_depth=2)\n",
-    "regr_2 = DecisionTreeRegressor(criterion='mse',max_depth=5)\n",
+    "regr_2 = DecisionTreeRegressor(criterion='mse',max_depth=7)\n",
     "regr_1.fit(Xtrain, ytrain)\n",
     "regr_2.fit(Xtrain, ytrain)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "forty-typing",
+   "id": "alternative-master",
    "metadata": {},
    "source": [
     "### Calculating Predicted Sales Price based on regression decision tree features"
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "higher-withdrawal",
+   "execution_count": 90,
+   "id": "moved-briefs",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "       12.25701661, 12.25701661, 11.95305136, 12.25701661, 11.95305136])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,89 +219,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "sustainable-checklist",
+   "execution_count": 91,
+   "id": "rocky-drilling",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([12.15887003, 11.82410259, 11.64172974, 11.27075234, 11.96925   ,\n",
-       "       12.63324347, 12.63324347, 12.15887003, 12.3611113 , 12.15887003,\n",
-       "       12.06318059, 11.64172974, 12.41345235, 12.84723522, 12.41345235,\n",
-       "       11.66393765, 11.64172974, 11.96925   , 12.15887003, 11.64172974,\n",
-       "       11.82410259, 11.96382847, 12.48471834, 12.84723522, 11.72163036,\n",
-       "       12.22680507, 11.72163036, 12.15887003, 13.27773466, 11.96925   ,\n",
-       "       12.22680507, 11.66393765, 11.64172974, 11.64172974, 11.72163036,\n",
-       "       12.84723522, 11.64172974, 11.64172974, 12.3611113 , 11.82410259,\n",
-       "       11.82410259, 11.82410259, 11.72163036, 11.72163036, 12.06318059,\n",
-       "       12.06318059, 11.90817354, 12.15887003, 12.41345235, 12.3611113 ,\n",
-       "       11.43924886, 12.91066924, 11.43924886, 12.50689578, 12.41345235,\n",
-       "       11.43924886, 11.64172974, 12.15887003, 11.82410259, 12.06318059,\n",
-       "       12.06318059, 12.50689578, 11.64172974, 11.62792629, 12.06318059,\n",
-       "       11.64172974, 11.66393765, 12.3611113 , 11.96925   , 11.82410259,\n",
-       "       11.82410259, 11.66393765, 12.63324347, 12.15887003, 12.06318059,\n",
-       "       12.15887003, 12.15887003, 11.82410259, 12.84723522, 12.41345235,\n",
-       "       11.82410259, 11.66393765, 11.85150214, 11.96925   , 12.15887003,\n",
-       "       11.96925   , 12.06318059, 11.96925   , 12.22680507, 12.06318059,\n",
-       "       12.41345235, 11.96925   , 11.64172974, 11.96925   , 11.72163036,\n",
-       "       11.72163036, 11.64172974, 11.82410259, 11.85150214, 11.82410259,\n",
-       "       12.22680507, 11.85150214, 11.5035116 , 11.85150214, 11.64172974,\n",
-       "       11.90817354, 11.96925   , 12.41345235, 11.82410259, 12.50689578,\n",
-       "       12.06318059, 11.82410259, 11.85150214, 12.15887003, 12.41345235,\n",
-       "       12.06318059, 12.41345235, 11.64172974, 12.22680507, 12.26564489,\n",
-       "       12.06318059, 12.26564489, 12.91066924, 11.90817354, 11.96382847,\n",
-       "       11.96925   , 12.84723522, 11.72163036, 12.3611113 , 12.15887003,\n",
-       "       12.63324347, 11.5035116 , 11.64172974, 11.82410259, 11.72163036,\n",
-       "       12.06318059, 13.27773466, 12.84723522, 12.3611113 , 11.64172974,\n",
-       "       11.66393765, 12.22680507, 12.06318059, 12.15887003, 11.82410259,\n",
-       "       12.15887003, 11.82410259, 12.15887003, 12.3611113 , 11.64172974,\n",
-       "       12.15887003, 12.06318059, 11.85150214, 12.06318059, 12.15887003,\n",
-       "       12.63324347, 11.82410259, 11.82410259, 11.43924886, 11.66393765,\n",
-       "       11.43924886, 11.82410259, 11.96382847, 11.85150214, 11.64172974,\n",
-       "       11.82410259, 11.96382847, 11.82410259, 11.82410259, 11.82410259,\n",
-       "       12.3611113 , 12.22680507, 12.3611113 , 12.41345235, 12.06318059,\n",
-       "       11.85150214, 12.22680507, 12.06318059, 11.82410259, 11.96925   ,\n",
-       "       11.85150214, 12.15887003, 11.79800006, 11.85150214, 12.60757816,\n",
-       "       11.66393765, 12.63324347, 12.63324347, 12.06318059, 11.64172974,\n",
-       "       11.64172974, 11.82410259, 11.43924886, 12.48471834, 11.72163036,\n",
-       "       12.50689578, 12.15887003, 11.82410259, 11.82410259, 11.27075234,\n",
-       "       12.15887003, 12.63324347, 12.06318059, 12.06318059, 12.48471834,\n",
-       "       11.66393765, 12.15887003, 12.3611113 , 12.50689578, 11.96382847,\n",
-       "       12.15887003, 11.64172974, 11.96382847, 11.85150214, 12.41345235,\n",
-       "       12.41345235, 11.64172974, 11.5035116 , 12.06318059, 11.43924886,\n",
-       "       13.27773466, 11.64172974, 11.96382847, 12.3611113 , 11.82410259,\n",
-       "       11.85150214, 12.26564489, 11.96925   , 11.96925   , 12.15887003,\n",
-       "       11.66393765, 12.15887003, 11.5035116 , 12.06318059, 12.84723522,\n",
-       "       11.79800006, 12.63324347, 11.64172974, 11.82410259, 12.63324347,\n",
-       "       12.84723522, 12.15887003, 11.85150214, 11.82410259, 11.85150214,\n",
-       "       11.66393765, 11.96925   , 11.82410259, 11.96925   , 11.85150214,\n",
-       "       11.64172974, 11.62792629, 12.15887003, 11.96925   , 11.82410259,\n",
-       "       11.72163036, 12.15887003, 11.62792629, 12.84723522, 11.82410259,\n",
-       "       12.48471834, 12.22680507, 12.15887003, 11.96925   , 11.66393765,\n",
-       "       12.06318059, 11.72163036, 12.15887003, 11.82410259, 11.43924886,\n",
-       "       12.15887003, 12.06318059, 11.82410259, 11.64172974, 12.22680507,\n",
-       "       11.82410259, 11.96925   , 11.64172974, 12.22680507, 11.72163036,\n",
-       "       11.66393765, 11.85150214, 11.66393765, 11.85150214, 12.50689578,\n",
-       "       12.41345235, 11.66393765, 11.64172974, 12.41345235, 11.64172974,\n",
-       "       11.64172974, 12.63324347, 11.82410259, 11.82410259, 12.15887003,\n",
-       "       12.3611113 , 12.06318059, 12.22680507, 11.85150214, 11.64172974,\n",
-       "       11.82410259, 11.82410259, 11.82410259, 12.15887003, 11.85150214,\n",
-       "       12.22680507, 11.85150214, 12.06318059, 11.79800006, 12.15887003,\n",
-       "       11.96925   , 11.82410259, 11.82410259, 12.41345235, 11.96382847,\n",
-       "       11.43924886, 12.60757816, 12.15887003, 12.06318059, 12.06318059,\n",
-       "       12.15887003, 12.06318059, 12.22680507, 12.63324347, 11.82410259,\n",
-       "       13.27773466, 12.15887003, 12.3611113 , 11.82410259, 11.82410259,\n",
-       "       11.64172974, 12.48471834, 12.41345235, 12.60757816, 12.06318059,\n",
-       "       11.96382847, 11.85150214, 11.82410259, 12.63324347, 12.06318059,\n",
-       "       12.15887003, 12.15887003, 11.5035116 , 12.26564489, 11.5035116 ,\n",
-       "       11.96925   , 11.96925   , 11.96925   , 12.26564489, 11.43924886,\n",
-       "       12.15887003, 12.15887003, 12.84723522, 11.82410259, 11.82410259,\n",
-       "       11.82410259, 12.15887003, 11.85150214, 11.5035116 , 12.63324347,\n",
-       "       12.26564489, 12.26564489, 11.96925   , 12.48471834, 12.22680507])"
+       "array([12.16954797, 11.84536519, 11.69356162, 11.2598616 , 11.99655448,\n",
+       "       12.61032963, 12.61274572, 12.10406554, 12.33848433, 12.3079557 ,\n",
+       "       12.11159394, 11.53966707, 11.9879294 , 12.85465073, 12.45265364,\n",
+       "       11.72785723, 11.69356162, 11.99655448, 12.16954797, 11.69356162,\n",
+       "       11.84536519, 11.88494576, 12.58304588, 12.85465073, 11.60077314,\n",
+       "       12.16904109, 11.60077314, 12.10406554, 13.25269776, 11.99655448,\n",
+       "       12.31619553, 11.72785723, 11.69356162, 11.53966707, 11.86396844,\n",
+       "       12.85465073, 11.69356162, 11.69356162, 12.33848433, 11.59141331,\n",
+       "       11.59141331, 11.84536519, 11.72176127, 11.72176127, 12.11159394,\n",
+       "       12.11159394, 12.09368751, 12.10406554, 12.45265364, 12.33848433,\n",
+       "       11.53776623, 12.89808133, 11.53776623, 12.45540299, 11.9879294 ,\n",
+       "       11.53776623, 11.69356162, 12.10406554, 11.84536519, 12.11159394,\n",
+       "       12.11159394, 12.45540299, 11.69356162, 11.59906108, 12.11159394,\n",
+       "       11.69356162, 11.72785723, 12.33848433, 11.99655448, 11.59141331,\n",
+       "       12.23674621, 11.39927139, 12.61274572, 12.16954797, 11.98724837,\n",
+       "       12.10406554, 12.16954797, 11.84536519, 12.71792039, 11.9879294 ,\n",
+       "       11.84536519, 11.72785723, 11.85692415, 11.99655448, 12.16954797,\n",
+       "       11.99655448, 12.11159394, 11.99655448, 12.16904109, 12.11159394,\n",
+       "       11.9879294 , 11.99655448, 11.69356162, 11.50314595, 11.60077314,\n",
+       "       11.60077314, 11.69356162, 11.84536519, 11.87520128, 11.84536519,\n",
+       "       12.16904109, 11.85692415, 11.58452088, 11.75071038, 11.69356162,\n",
+       "       11.87118679, 11.99655448, 12.04941884, 11.84536519, 12.45540299,\n",
+       "       11.3736634 , 11.59141331, 11.87520128, 12.10406554, 12.45265364,\n",
+       "       12.11159394, 12.45265364, 11.69356162, 12.16904109, 12.10700586,\n",
+       "       11.98724837, 12.23775171, 12.89808133, 12.09368751, 11.88494576,\n",
+       "       11.99655448, 12.71792039, 11.86396844, 12.33848433, 12.16954797,\n",
+       "       12.61032963, 11.59588441, 11.69356162, 11.59141331, 11.60077314,\n",
+       "       12.11159394, 13.53447303, 12.71792039, 12.33848433, 11.69356162,\n",
+       "       11.39927139, 12.31619553, 11.98724837, 12.16954797, 11.84536519,\n",
+       "       12.16954797, 11.59141331, 12.10406554, 12.33848433, 11.69356162,\n",
+       "       12.10406554, 12.11159394, 11.75071038, 12.11159394, 12.3079557 ,\n",
+       "       12.61032963, 11.84536519, 11.84536519, 11.33829988, 11.72785723,\n",
+       "       11.32192909, 11.84536519, 12.07161794, 11.87520128, 11.69356162,\n",
+       "       11.84536519, 12.07161794, 11.84536519, 11.84536519, 11.59141331,\n",
+       "       12.33848433, 12.16904109, 12.33848433, 12.45265364, 12.11159394,\n",
+       "       11.85692415, 12.31619553, 12.11159394, 11.84536519, 11.99655448,\n",
+       "       11.87520128, 12.10406554, 11.81709525, 11.75071038, 12.5404461 ,\n",
+       "       11.57354054, 12.89705576, 12.61274572, 11.98724837, 11.69356162,\n",
+       "       11.69356162, 11.84536519, 11.53776623, 12.58304588, 11.63479056,\n",
+       "       12.45540299, 12.16954797, 11.84536519, 11.84536519, 11.2598616 ,\n",
+       "       12.3079557 , 12.41742381, 12.11159394, 12.11159394, 12.58304588,\n",
+       "       11.72785723, 12.10406554, 12.33848433, 12.58005192, 12.0932493 ,\n",
+       "       12.16954797, 11.69356162, 12.07161794, 11.75071038, 12.45265364,\n",
+       "       12.45265364, 11.69356162, 11.34054198, 11.98724837, 11.53776623,\n",
+       "       13.53447303, 11.69356162, 12.07161794, 12.33848433, 11.59141331,\n",
+       "       11.75071038, 12.23775171, 11.99655448, 11.99655448, 12.10406554,\n",
+       "       11.72785723, 12.16954797, 11.58452088, 11.98724837, 12.85465073,\n",
+       "       11.81709525, 12.61274572, 11.53966707, 11.84536519, 12.61274572,\n",
+       "       12.71792039, 12.16954797, 11.96296266, 11.84536519, 11.87520128,\n",
+       "       11.75586395, 11.50314595, 11.84536519, 11.99655448, 11.96296266,\n",
+       "       11.69356162, 11.59906108, 12.16954797, 11.99655448, 11.94000945,\n",
+       "       11.72176127, 12.10406554, 11.6784399 , 12.85465073, 11.84536519,\n",
+       "       12.35331608, 12.31619553, 12.3079557 , 11.99655448, 11.72785723,\n",
+       "       12.11159394, 11.86396844, 12.10406554, 11.84536519, 11.53776623,\n",
+       "       12.16954797, 12.11159394, 11.59141331, 11.69356162, 12.16904109,\n",
+       "       11.59141331, 11.99655448, 11.69356162, 12.16904109, 11.86396844,\n",
+       "       11.72785723, 11.87520128, 11.72785723, 11.87520128, 12.45540299,\n",
+       "       12.45265364, 11.72785723, 11.69356162, 12.45265364, 11.69356162,\n",
+       "       11.53966707, 12.61032963, 11.59141331, 11.84536519, 12.10406554,\n",
+       "       12.33848433, 12.11159394, 12.16904109, 11.96296266, 11.69356162,\n",
+       "       11.84536519, 11.84536519, 11.84536519, 12.16954797, 11.87520128,\n",
+       "       12.16904109, 11.87520128, 12.11159394, 11.81709525, 12.10406554,\n",
+       "       11.99655448, 11.84536519, 11.84536519, 12.45265364, 11.88494576,\n",
+       "       11.32192909, 12.66980666, 12.10406554, 12.11159394, 12.11159394,\n",
+       "       12.16954797, 12.11159394, 12.16904109, 12.61274572, 11.59141331,\n",
+       "       13.07107008, 12.10406554, 12.33848433, 11.59141331, 11.59141331,\n",
+       "       11.69356162, 12.58304588, 12.45265364, 12.5404461 , 12.11159394,\n",
+       "       12.0932493 , 11.85692415, 11.84536519, 12.61274572, 12.11159394,\n",
+       "       12.16954797, 12.3079557 , 11.34054198, 12.49262074, 11.59588441,\n",
+       "       11.99655448, 11.99655448, 11.99655448, 12.49262074, 11.53776623,\n",
+       "       12.3079557 , 12.10406554, 12.85465073, 11.84536519, 11.84536519,\n",
+       "       11.84536519, 12.16954797, 11.87520128, 11.59588441, 12.61274572,\n",
+       "       12.10700586, 12.23775171, 11.99655448, 12.58304588, 12.16904109])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intimate-australia",
+   "id": "swiss-silence",
    "metadata": {},
    "source": [
     "### Calculating root mean squared errors"
@@ -321,8 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "innovative-prayer",
+   "execution_count": 92,
+   "id": "competitive-probe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,8 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "welsh-edinburgh",
+   "execution_count": 93,
+   "id": "blessed-brain",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
      "output_type": "stream",
      "text": [
       "Root mean squared for decision tree with maximum depth = 2: 0.2607\n",
-      "Root mean squared for decision tree with maximum depth = 5: 0.2037\n"
+      "Root mean squared for decision tree with maximum depth = 5: 0.2006\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-drunk",
+   "id": "express-december",
    "metadata": {},
    "source": [
     "### Applying 10 fold cross validation\n"
@@ -362,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "serial-forty",
+   "execution_count": 94,
+   "id": "superb-supplement",
    "metadata": {},
    "outputs": [
     {
@@ -372,12 +372,12 @@
      "text": [
       "Training score based on tree 1: [0.54837561 0.53017289 0.60066327 0.56617855 0.56166654 0.53726761\n",
       " 0.56279964 0.5196128  0.57945824 0.61526907]\n",
-      "Training score based on tree 2: [0.73497673 0.60782579 0.68857935 0.74095998 0.77183245 0.67801573\n",
-      " 0.66794353 0.70792635 0.72418223 0.81441621]\n",
+      "Training score based on tree 2: [0.67966016 0.62556156 0.61978493 0.72090598 0.78584017 0.69339675\n",
+      " 0.52767943 0.67506019 0.74960248 0.79708889]\n",
       "Testing score based on tree 1: [ 0.67440387  0.57686695 -0.01500865  0.49378895  0.3863423   0.67445925\n",
       "  0.47805461  0.56406095  0.49131686  0.63030423]\n",
-      "Testing score based on tree 2: [0.84901009 0.74493298 0.46593197 0.68052882 0.45159022 0.82265259\n",
-      " 0.55814978 0.65879362 0.72642373 0.74703749]\n"
+      "Testing score based on tree 2: [0.8524907  0.70922636 0.36625236 0.65474665 0.4989576  0.84794976\n",
+      " 0.45639187 0.64032843 0.54835688 0.81320228]\n"
      ]
     }
    ],
@@ -395,18 +395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "expected-ownership",
+   "execution_count": 96,
+   "id": "moral-prototype",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training score based on tree 1: 0.562146423968055\n",
-      "Average training score based on tree 2: 0.7100441126607342\n",
-      "Average testing score based on tree 1: 0.495458933091481\n",
-      "Average testing score based on tree 2: 0.6290113801869202\n"
+      "Average training score based on tree 1: 0.5621464239680554\n",
+      "Average training score based on tree 2: 0.6874580528560676\n",
+      "Average testing score based on tree 1: 0.4954589330914815\n",
+      "Average testing score based on tree 2: 0.638790287474648\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hawaiian-hollywood",
+   "id": "assisted-import",
    "metadata": {},
    "source": [
     "### Visualizing the results"
@@ -428,7 +428,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "trying-liquid",
+   "id": "interested-council",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "three-trash",
    "metadata": {},
    "outputs": [],
    "source": []
